# credit-score-modelling-with-optbinning

./: Makefile  README.md  pyproject.toml  requirements.txt
credit_scorecard_modelling_with_optbinning/: __init__.py  dataset.py  features.py  plots.py
credit_scorecard_modelling_with_optbinning/modeling/: predict.py  train.py
models/: optbinning-scorecard-model.pkl  optbinning_scorecard_model.pkl
notebooks/: 01-data-exploration.ipynb  02-modelling-with-optbinning.ipynb
reports/: coverage_table.csv  credit_scorecard.csv
