[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_scorecard_modelling_with_optbinning"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Marcellinus Aditya Witarsah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["credit_scorecard_modelling_with_optbinning"]
force_sort_within_sections = true
